--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "bignumber.js": "^9.0.1",
     "react": "16.11.0",
     "react-dom": "16.11.0",
+    "react-masonry-css": "^1.0.16",
     "react-scripts": "3.2.0",
     "web3": "1.2.2"
   },
